- Fix for error when calling RoleProvider.RemoveUserFromRole(): causes an exception due to a wrong table being used (MySql bug #65805, Oracle bug #14405338).
- Fix for "Memory Leak on MySql.Data.MySqlClient.MySqlCommand", too many MemoryStream's instances created (MySql bug #65696, Oracle bug #14468204).
- Added ANTLR attribution notice (Oracle bug #14379162).

6.5.4
- Fix for Duplicate table name don't allow you to change table name (Oracle bug #13785918).
- Fix for Comment turns green the whole line (Oracle bug #13613856).
- Fix for CommandText property set method performance improvement (MySql bug #64012, Oracle bug #13739383).
- Fix for Foreign Keys not imported in Entity Model Wizard (Oracle bug #13800109).

6.5.3
- Return datetime values for timestamp fields as DateTimeKind.Local (MySQL bug #63812, Oracle bug #13591554)
- Fix for "Connector/Net Generates Incorrect SELECT Clause after UPDATE" (MySql bug #62134, Oracle bug #13491689). 
- Fix for Error on intellisense when typing "-" (Orable Bug #13522344). 
- Fix for VS IS SHOWING AN ERROR WHEN TRYING TO CREATE A FOREIGN KEY (Oracle bug #13511776).
- Made parser fully compliant with MySql 5.1.
- Fixed creation Trigger dialog bug (Oracle bug #13511801)
- Fix for Error when changing data length in table designer in varchar columns. (Oracle bug #13611677).
- Fix for Bug in Visual Studio Table Designer on editing column name the changes were not visually detected until focus is switched (Oracle bug #13613755).
- Fix for VS let you close the FK dialog even when the created FK do not have any data (Oracle bug #13613839).
- Fix for error when creating index through VS table designer. (Oracle bug # 13613765 - INDEX/KEYS ERROR MODIFYING COLUMNS FIELD).
- Fix on Bug #62801 (mysql.dev) #13491698 Orabug DB Strange behaviour with Include in LINQ-to-Entities. Changes on SelectStatement class on method GetDefaultColumnsForFragment to assign the table name when adding a new column. 