@@ -118,8 +118,6 @@ namespace MySql.Data.Common
         Debug.Assert(false, "Connection is already open");
       }
       
-      MySqlSecurityPermission.CreatePermissionSet(false).Assert(); 
-
       GetConnectNumber(timeOut);
       SetupEvents();
     }
